# PatX-Studio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DIRECTORY_RENAME_SUMMARY.md  Makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/landing-page/: TALK_TO_SALES_IMPLEMENTATION.md  next.config.js  package.json
apps/landing-page/public/: manifest.json  robots.txt  sitemap.xml
apps/landing-page/src/app/: ClientBody.tsx  globals.css  layout.tsx  output.css  page.tsx
apps/landing-page/src/components/: CTASection.tsx  FeatureSection.tsx  Footer.tsx  HeroSection.tsx  LogoCloud.tsx  PricingSection.tsx  README.md  TalkToSalesForm.tsx  TalkToSalesPage.tsx  TestimonialsSection.tsx  index.ts  navbar.tsx
apps/landing-page/src/hooks/: useTalkToSales.ts
apps/web/: package.json  tailwind.config.js
apps/web-app/: AGENTS.md  README-feature-compare.md  env.local.example  eslint.config.mjs  next.config.ts  package.json  tailwind.config.js
apps/web-app/src/app/: globals.css  layout.tsx  page.tsx
apps/web-app/src/components/: ai-chat.tsx  content-editor.tsx  header.tsx  (+5 more)
apps/web/public/: manifest.json
services/: README.md  claim_chart.db  config.py  env.example  main.py  pyproject.toml  requirements.txt  start.py
services/analyzers/: feature_comparator.py  tech_analyzer.py
services/api/: feature_api.py  feature_compare_api.py
services/database/: crud.py  session.py
services/models/: feature.py
services/processors/: document_processor.py
services/schemas/: feature_schema.py
services/utils/: llm_clients.py  llm_utils.py
(+36 files in other folders)
